infra-ssh/environments/07-setup-network/05-ngix-demo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-demo
          image: nginxdemos/hello
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
  namespace: demo
spec:
  selector:
    app: nginx   # match với label của Pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


# frontend front-in
#     bind *:80
#     mode http
#     default_backend back-out

# backend back-out
#     mode http
#     http-request set-header Host www.nginx.com
#     server nginx-server 20.0.20.101:80
