infra-ssh/environments/07-setup-network/04-router.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multi-route
  namespace: demo
spec:
  parentRefs:
    - name: gw-demo
      namespace: kube-system
  hostnames:
    - "www.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /nginx
      backendRefs:
        - name: my-nginx-service
          port: 80
