infra-ssh/environments/07-setup-network/06-router-argocd.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: gw-http
      namespace: kube-system
  hostnames:
    - "www.argocd.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
      backendRefs:
        - name: argocd-server
          port: 80
